[gd_scene load_steps=21 format=2]

[ext_resource path="res://Scripts/UI.gd" type="Script" id=1]
[ext_resource path="res://Roboto/Roboto-Light.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/save.png" type="Texture" id=3]
[ext_resource path="res://Assets/trashcan.png" type="Texture" id=4]
[ext_resource path="res://Assets/home.png" type="Texture" id=5]
[ext_resource path="res://Scripts/Camera2D.gd" type="Script" id=6]
[ext_resource path="res://Scripts/Trash.gd" type="Script" id=7]
[ext_resource path="res://Assets/information.png" type="Texture" id=8]
[ext_resource path="res://Roboto/Roboto-Italic.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Roboto/Roboto-Medium.ttf" type="DynamicFontData" id=10]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.627451, 0.627451, 0.627451, 1 )
border_color = Color( 0.27451, 0.956863, 0.282353, 1 )
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 0.121569, 0.121569, 0.54902 )
border_color = Color( 0, 0, 0, 0.54902 )
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10

[sub_resource type="DynamicFont" id=7]
size = 24
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=10]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.686275, 0.686275, 0.686275, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.372549, 0.372549, 0.372549, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.839216, 0.839216, 0.839216, 1 )
border_width_left = 10
border_color = Color( 0.8, 0.8, 0.8, 0 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 0.266667, 0.266667, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=3]
size = 50
outline_color = Color( 1, 1, 1, 0 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 9 )

[node name="UI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Warning" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.650101
margin_right = 0.650146
color = Color( 0.25098, 0.25098, 0.25098, 0.333333 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="warning_panel" type="Panel" parent="Warning"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.65
margin_top = -100.0
margin_right = 199.35
margin_bottom = 100.0
custom_styles/panel = SubResource( 5 )

[node name="Warning_title" type="Label" parent="Warning/warning_panel"]
margin_right = 399.0
margin_bottom = 40.0
size_flags_vertical = 3
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
text = "WARNING!"
align = 1
valign = 1

[node name="Text" type="Label" parent="Warning/warning_panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -177.0
margin_top = -38.0
margin_right = 183.0
margin_bottom = -1.0
custom_fonts/font = SubResource( 10 )
text = "Warning to be displayed"
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="OK" type="Button" parent="Warning/warning_panel"]
margin_left = 32.0
margin_top = 136.0
margin_right = 136.0
margin_bottom = 176.0
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 9 )
text = "OK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cancel" type="Button" parent="Warning/warning_panel"]
margin_left = 272.0
margin_top = 136.0
margin_right = 368.0
margin_bottom = 176.0
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 9 )
text = "CANCEl"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 509.587, 299.198 )
current = true
limit_left = -1500
limit_top = -1500
limit_right = 1500
limit_bottom = 1500
script = ExtResource( 6 )

[node name="Buttons" type="Control" parent="."]
anchor_right = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Job" type="Button" parent="Buttons"]
modulate = Color( 1, 1, 1, 0.588235 )
margin_left = 46.633
margin_top = -20.0
margin_right = 350.633
margin_bottom = 77.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 64, 64 )
focus_mode = 0
custom_styles/hover = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.984314, 0.976471, 0.976471, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
enabled_focus_mode = 0
text = "ADD EVENT"
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panalmanger" type="Button" parent="Buttons"]
modulate = Color( 1, 1, 1, 0.588235 )
margin_left = 215.658
margin_top = -20.0
margin_right = 501.658
margin_bottom = 77.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 64, 64 )
focus_mode = 0
custom_styles/hover = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.168627, 0.168627, 0.168627, 1 )
enabled_focus_mode = 0
text = "ADD PANEL"
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save" type="Button" parent="Buttons"]
modulate = Color( 0.0745098, 0.0745098, 0.0745098, 0.588235 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -110.347
margin_top = -30.325
margin_right = 39.6558
margin_bottom = 84.675
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 64, 64 )
focus_mode = 0
custom_styles/hover = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.168627, 0.168627, 0.168627, 1 )
enabled_focus_mode = 0
icon = ExtResource( 3 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Home" type="Button" parent="Buttons"]
modulate = Color( 0.0745098, 0.0745098, 0.0745098, 0.588235 )
margin_left = -31.3499
margin_top = -29.4499
margin_right = 118.653
margin_bottom = 85.5501
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 64, 64 )
focus_mode = 0
custom_styles/hover = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.168627, 0.168627, 0.168627, 1 )
enabled_focus_mode = 0
icon = ExtResource( 5 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Trash" type="Button" parent="."]
modulate = Color( 0.227451, 0.227451, 0.227451, 1 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -71.0
margin_top = -68.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 4 )
flat = true
expand_icon = true
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="information" type="HBoxContainer" parent="."]
modulate = Color( 1, 0.105882, 0.12549, 0.54902 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = -0.568787
margin_top = -31.7064
margin_right = 413.431
margin_bottom = -1.70642
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="information"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
size_flags_vertical = 4
texture = ExtResource( 8 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="Label" parent="information"]
margin_left = 34.0
margin_top = 3.0
margin_right = 136.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Information"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="Warning/warning_panel/OK" to="." method="_on_OK_button_down"]
[connection signal="button_down" from="Warning/warning_panel/Cancel" to="." method="_on_Cancel_button_down"]
[connection signal="button_down" from="Buttons/Job" to="." method="_on_Job_button_down"]
[connection signal="button_down" from="Buttons/Panalmanger" to="." method="_on_Panalmanger_button_down"]
[connection signal="button_down" from="Buttons/Save" to="." method="_on_Save_button_down"]
[connection signal="button_down" from="Buttons/Home" to="." method="_on_Home_button_down"]
[connection signal="mouse_exited" from="Trash" to="Trash" method="_on_Trash_mouse_exited"]
